Fix invalid call to on-manually-add-discovered-printer.

on-manually-add-discovered-printer was being called with invalid
parameters.  Refactor so it's easier to call properly and fix
the bad callsite.

Observed behavior was that the setup dialog would close without
any messaging.  User is prompted for a PPD now.

Bug: 835476
Change-Id: I85ae96cf1f9638098cd819fccb47b30e16274a58
Reviewed-on: https://chromium-review.googlesource.com/1023040
Commit-Queue: Sean Kau <skau@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553827}
Former-commit-id: ca91319fcf3be47ed958cb706defea91e4b17e93